--- a/index.html
+++ b/index.html
@@ -4,253 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Online C Editor</title>
-  <style>
-    /* CSS Variables for light/dark theme */
-    :root {
-      --bg-color: #f5f5f5;
-      --text-color: #1e1e1e;
-      --editor-bg: #ffffff;
-      --editor-text: #1e1e1e;
-      --terminal-bg: #eaeaea;
-      --terminal-text: #2d2d2d;
-      --border-color: #ccc;
-      --btn-bg: #ddd;
-      --btn-text: #333;
-      --btn-hover-bg: #ccc;
-      --status-bg: #f0f0f0;
-      --status-text: #555;
-    }
-    [data-theme="dark"] {
-      --bg-color: #1e1e1e;
-      --text-color: #d4d4d4;
-      --editor-bg: #252526;
-      --editor-text: #d4d4d4;
-      --terminal-bg: #1e1e1e;
-      --terminal-text: #d4d4d4;
-      --border-color: #3c3c3c;
-      --btn-bg: #333;
-      --btn-text: #eee;
-      --btn-hover-bg: #444;
-      --status-bg: #252525;
-      --status-text: #aaa;
-    }
-
-    /* Reset & base */
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      background: var(--bg-color);
-      color: var(--text-color);
-      font-family: 'Source Code Pro', monospace, monospace;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      user-select: none;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
-    #app {
-      flex: 1 1 auto;
-      display: grid;
-      height: 100vh;
-      max-width: 1200px;
-      margin: 0 auto;
-      border: 1px solid var(--border-color);
-      background: var(--editor-bg);
-      grid-template-rows: 40px 48px 1fr 28px;
-      grid-template-columns: 1fr;
-      user-select: text;
-      box-shadow: 0 0 12px rgba(0,0,0,0.15);
-    }
-    /* Header */
-    header {
-      grid-row: 1 / 2;
-      background: var(--status-bg);
-      color: var(--status-text);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0 16px;
-      font-weight: 700;
-      font-size: 1.2rem;
-      border-bottom: 1px solid var(--border-color);
-      user-select: none;
-    }
-    /* Toolbar */
-    #toolbar {
-      grid-row: 2 / 3;
-      background: var(--status-bg);
-      display: flex;
-      align-items: center;
-      padding: 6px 16px;
-      gap: 12px;
-      border-bottom: 1px solid var(--border-color);
-    }
-    #toolbar button {
-      background: var(--btn-bg);
-      color: var(--btn-text);
-      border: 1px solid var(--border-color);
-      padding: 8px 18px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-family: 'Source Code Pro', monospace;
-      font-weight: 600;
-      transition: background-color 0.2s ease;
-      user-select: none;
-      min-width: 110px;
-      text-align: center;
-    }
-    #toolbar button:disabled {
-      opacity: 0.5;
-      cursor: not-allowed;
-    }
-    #toolbar button:hover:not(:disabled) {
-      background-color: var(--btn-hover-bg);
-    }
-    /* Main content */
-    #main-content {
-      grid-row: 3 / 4;
-      display: grid;
-      grid-template-columns: 60% 40%;
-      overflow: hidden;
-      border-top: 1px solid var(--border-color);
-      height: calc(100vh - 116px);
-    }
-    /* Left pane - code editor */
-    #left-pane {
-      background: var(--editor-bg);
-      display: flex;
-      color: var(--editor-text);
-      position: relative;
-      overflow: hidden;
-      border-right: 1px solid var(--border-color);
-      font-size: 14px;
-      line-height: 1.4;
-    }
-    #lineNumbers {
-      background: #f0f0f0;
-      color: #888888;
-      user-select: none;
-      padding: 10px 6px 10px 10px;
-      text-align: right;
-      font-weight: 600;
-      font-family: 'Source Code Pro', monospace;
-      overflow: hidden;
-      flex-shrink: 0;
-      border-right: 1px solid var(--border-color);
-      min-width: 42px;
-      line-height: 1.4;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-    [data-theme="dark"] #lineNumbers {
-      background: #2a2a2a;
-      color: #777777;
-      border-right-color: #444444;
-    }
-    #codeInput {
-      background: transparent;
-      border: none;
-      color: var(--editor-text);
-      resize: none;
-      font-family: 'Source Code Pro', monospace;
-      font-size: 14px;
-      line-height: 1.4;
-      padding: 10px 12px;
-      outline: none;
-      flex: 1 1 auto;
-      overflow: auto;
-      caret-color: #0066cc;
-      transition: color 0.3s ease;
-    }
-    #codeInput::placeholder {
-      color: #999999;
-      font-style: italic;
-      transition: color 0.3s ease;
-    }
-    [data-theme="dark"] #codeInput::placeholder {
-      color: #bbbbbb;
-    }
-    /* Right pane - output terminal */
-    #right-pane {
-      background: var(--terminal-bg);
-      color: var(--terminal-text);
-      font-family: 'Source Code Pro', monospace;
-      font-size: 14px;
-      padding: 10px 12px;
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      overflow: hidden;
-      border-left: 1px solid var(--border-color);
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-    #output-header {
-      flex: 0 0 28px;
-      padding-bottom: 6px;
-      font-weight: 600;
-      border-bottom: 1px solid var(--border-color);
-      user-select: none;
-      color: var(--text-color);
-      font-size: 15px;
-    }
-    #terminalOutput {
-      flex: 1 1 auto;
-      background: var(--terminal-bg);
-      color: var(--terminal-text);
-      border-radius: 4px;
-      margin-top: 6px;
-      padding: 10px;
-      overflow-y: auto;
-      white-space: pre-wrap;
-      box-shadow: none;
-      user-select: text;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-    /* Scrollbar */
-    #terminalOutput::-webkit-scrollbar {
-      width: 8px;
-    }
-    #terminalOutput::-webkit-scrollbar-track {
-      background: transparent;
-    }
-    #terminalOutput::-webkit-scrollbar-thumb {
-      background-color: #888;
-      border-radius: 4px;
-    }
-    /* Status bar */
-    #status-bar {
-      grid-row: 4 / 5;
-      background: var(--status-bg);
-      color: var(--status-text);
-      font-size: 13px;
-      font-weight: 600;
-      padding: 0 16px;
-      line-height: 28px;
-      display: flex;
-      justify-content: space-between;
-      border-top: 1px solid var(--border-color);
-      user-select: none;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-    /* Responsive for small screens */
-    @media (max-width: 768px) {
-      #main-content {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        height: auto;
-      }
-      #left-pane, #right-pane {
-        height: 300px;
-        border: none;
-      }
-      #left-pane {
-        border-bottom: 1px solid var(--border-color);
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div id="app" role="main" aria-label="C programming IDE">
@@ -259,12 +14,11 @@
     </header>
 
     <section id="toolbar" role="toolbar" aria-label="Editor toolbar">
-      <button id="compileBtn" title="Compile code">Compile</button>
-      <button disabled title="Run functionality disabled">Run</button>
-      <button disabled title="Debug functionality disabled">Debug</button>
-      <button id="randomCodeBtn" title="Insert sample C code">Insert Sample Code</button>
-      <button id="clearTerminalBtn" title="Clear output window">Clear Output</button>
-      <button id="themeToggleBtn" title="Toggle Light/Dark Mode" aria-pressed="false" aria-label="Toggle light/dark mode">Dark Mode</button>
+      <button id="processBtn" title="Process code or send message">Process</button>
+      <button id="generateSampleBtn" title="Generate sample code">Generate Sample</button>
+      <button id="clearOutputBtn" title="Clear output window">Clear Output</button>
+      <button id="quietModeBtn" aria-pressed="false" aria-label="Toggle Quiet Mode" title="Toggle Quiet Mode">Quiet Mode Off</button>
+      <button id="themeToggleBtn" aria-pressed="false" aria-label="Toggle Light/Dark Mode" title="Toggle light/dark mode">Dark Mode</button>
     </section>
 
     <section id="main-content">
@@ -290,202 +44,8 @@
     </footer>
   </div>
 
-  <!-- Firebase SDK -->
   <script type="module" src="firebase-config.js"></script>
-
-  <script type="module">
-    import { ref, push, onValue } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js";
-
-    const codeInput = document.getElementById('codeInput');
-    const lineNumbers = document.getElementById('lineNumbers');
-    const terminalOutput = document.getElementById('terminalOutput');
-    const compileBtn = document.getElementById('compileBtn');
-    const randomCodeBtn = document.getElementById('randomCodeBtn');
-    const clearTerminalBtn = document.getElementById('clearTerminalBtn');
-    const themeToggleBtn = document.getElementById('themeToggleBtn');
-    const statusMessage = document.getElementById('statusMessage');
-    const statusLn = document.getElementById('statusLn');
-    const statusCol = document.getElementById('statusCol');
-
-    const messagesRef = ref(window.firebase.database, 'messages');
-
-    function formatTimestamp(date) {
-      const h = date.getHours();
-      const m = date.getMinutes().toString().padStart(2, '0');
-      const ampm = h >= 12 ? 'PM' : 'AM';
-      const hour12 = h % 12 || 12;
-      return hour12 + ':' + m + ' ' + ampm;
-    }
-
-    function updateLineNumbers() {
-      const val = codeInput.value;
-      const lines = val.split('\n').length;
-      const numbers = Array.from({length: lines}, (_, i) => i+1).join('\n');
-      lineNumbers.textContent = numbers;
-    }
-    function syncScroll() {
-      lineNumbers.scrollTop = codeInput.scrollTop;
-    }
-    codeInput.addEventListener('input', () => {
-      updateLineNumbers();
-      updateCursorStatus();
-    });
-    codeInput.addEventListener('scroll', syncScroll);
-    codeInput.addEventListener('keydown', updateCursorStatus);
-    codeInput.addEventListener('click', updateCursorStatus);
-
-    function updateCursorStatus() {
-      const pos = codeInput.selectionStart;
-      const val = codeInput.value;
-      const lines = val.substr(0, pos).split('\n');
-      const lineNum = lines.length;
-      const colNum = lines[lines.length - 1].length + 1;
-      statusLn.textContent = lineNum;
-      statusCol.textContent = colNum;
-    }
-
-    function scrollTerminalToBottom() {
-      terminalOutput.scrollTop = terminalOutput.scrollHeight;
-    }
-    function appendToTerminal(text) {
-      terminalOutput.textContent += text + '\n';
-      scrollTerminalToBottom();
-    }
-    function setTerminalLines(lines) {
-      terminalOutput.textContent = lines.join('\n') + '\n';
-      scrollTerminalToBottom();
-    }
-
-    const sampleCodes = [
-      `#include <stdio.h>
-int main() {
-  printf("Hello, World!\\n");
-  return 0;
-}`,
-      `struct Point {
-  int x;
-  int y;
-};
-void displayPoint(struct Point p) {
-  printf("Point(%d, %d)\\n", p.x, p.y);
-}`,
-      `int factorial(int n) {
-  if (n <= 1) return 1;
-  else return n * factorial(n - 1);
-}`,
-      `#include <string.h>
-void greet(char* name) {
-  printf("Hello, %s!\\n", name);
-}`,
-    ];
-
-    function clearTerminal() {
-      terminalOutput.textContent = '[INFO]: Output cleared.\n';
-      scrollTerminalToBottom();
-    }
-    function composeInfoMessage(msgText, timestamp = new Date()) {
-      return `[INFO - ${formatTimestamp(timestamp)}]: ${msgText}`;
-    }
-
-    compileBtn.addEventListener('click', () => {
-      const codeText = codeInput.value.trim();
-      const msgPattern = /^\/\/ msg:\s*(.+)$/s;
-      const match = codeText.match(msgPattern);
-      if (match) {
-        const messageText = match[1].trim();
-        if (messageText.length === 0) {
-          statusMessage.textContent = 'Cannot send empty message.';
-          return;
-        }
-        const timestamp = Date.now();
-        push(messagesRef, {
-          text: messageText,
-          timestamp: timestamp
-        }).then(() => {
-          statusMessage.textContent = 'Message sent successfully.';
-          codeInput.value = '// msg: ';
-          updateLineNumbers();
-          updateCursorStatus();
-        }).catch(() => {
-          statusMessage.textContent = 'Error sending message.';
-        });
-        appendToTerminal(composeInfoMessage('Message sent.'));
-      } else {
-        statusMessage.textContent = 'Compiling...';
-        setTimeout(() => {
-          const outcomes = [
-            '[INFO] Compilation successful ✅',
-            '[ERROR] Compilation failed ❌'
-          ];
-          const randomIndex = Math.random() < 0.7 ? 0 : 1;
-          setTerminalLines([outcomes[randomIndex]]);
-          statusMessage.textContent = randomIndex === 0 ? 'Ready' : 'Compilation error.';
-        }, 800);
-      }
-    });
-
-    onValue(messagesRef, (snapshot) => {
-      const msgsObj = snapshot.val();
-      if (!msgsObj) {
-        terminalOutput.textContent = '';
-        return;
-      }
-      const msgsArray = Object.values(msgsObj);
-      msgsArray.sort((a,b) => a.timestamp - b.timestamp);
-      const lines = msgsArray.map(m => composeInfoMessage(m.text, new Date(m.timestamp)));
-      setTerminalLines(lines);
-    });
-
-    randomCodeBtn.addEventListener('click', () => {
-      const randomIndex = Math.floor(Math.random() * sampleCodes.length);
-      codeInput.value = sampleCodes[randomIndex];
-      updateLineNumbers();
-      updateCursorStatus();
-      setTerminalLines(['[INFO] Compilation successful ✅']);
-      statusMessage.textContent = 'Sample code inserted.';
-    });
-
-    clearTerminalBtn.addEventListener('click', () => {
-      clearTerminal();
-      statusMessage.textContent = 'Output cleared.';
-    });
-
-    updateLineNumbers();
-    updateCursorStatus();
-    clearTerminal();
-
-    codeInput.addEventListener('keydown', e => {
-      if ((e.ctrlKey || e.metaKey) && e.key === 'Enter') {
-        e.preventDefault();
-        compileBtn.click();
-      }
-    });
-
-    // Theme toggle logic
-    function setTheme(theme) {
-      if(theme === 'dark') {
-        document.documentElement.setAttribute('data-theme','dark');
-        themeToggleBtn.setAttribute('aria-pressed','true');
-        themeToggleBtn.textContent = 'Light Mode';
-      } else {
-        document.documentElement.removeAttribute('data-theme');
-        themeToggleBtn.setAttribute('aria-pressed','false');
-        themeToggleBtn.textContent = 'Dark Mode';
-      }
-      localStorage.setItem('cEditorTheme', theme);
-    }
-    const savedTheme = localStorage.getItem('cEditorTheme');
-    if(savedTheme) {
-      setTheme(savedTheme);
-    } else {
-      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-      setTheme(prefersDark ? 'dark' : 'light');
-    }
-    themeToggleBtn.addEventListener('click', () => {
-      const currentTheme = document.documentElement.getAttribute('data-theme');
-      if(currentTheme === 'dark') { setTheme('light'); }
-      else { setTheme('dark'); }
-    });
-  </script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
+
